--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <link href='http://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans:600italic,700italic,700,300,600,800,400|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.3.0/flexslider-min.css">
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -542,8 +543,8 @@
       <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
       <!-- endbower -->
       <!-- endbuild -->
-      <script src="bower_components/jquery.easing/js/jquery.easing.min.js"></script>
-      <script src="bower_components/flexslider-compass/jquery.flexslider.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.3.0/jquery.flexslider-min.js"></script>
       <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
       <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -552,7 +553,7 @@
       e.src='//www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X');ga('send','pageview');
-      </script>
+      </script>bower
       <!-- build:js({app,.tmp}) scripts/main.js -->
       <script src="scripts/main.js"></script>
       <!-- endbuild -->
