--- a/app/reparatii-turbosuflante.html
+++ b/app/reparatii-turbosuflante.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>TurboLine: reconditionari turbosuflante auto</title>
-    <meta name="description" content="Turbo Line garanteaza reconditionarea turbosuflantei la o calitate superioara.">
+    <meta name="description" content="Reconditionarea turbinei inseamna o economisire a 50% din pretul unei turbine noi. Preturile variaza in functie de tipul de turbina de care are nevoie masina dumnevoastra: cu geometrie fixa sau variabila, cu actuator electronic sau vacuumatic.">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -13,11 +13,9 @@
     <!-- endbuild -->
     <link href='http://fonts.googleapis.com/css?family=Patua+One|Open+Sans+Condensed:300|Open+Sans:400,300,600,600italic,700,700italic,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.3.0/flexslider-min.css">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/3.2.2/ekko-lightbox.min.css" rel="stylesheet">
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-    
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
@@ -40,16 +38,16 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav nav-pills navbar-right">
-          <li class="active"><a href="index.html">Acasa</a></li>
+          <li><a href="index.html">Acasa</a></li>
           <li><a href="servicii.html">Servicii</a></li>
-          <li><a href="reparatii-turbosuflante.html">Reparatii turbosuflante</a></li>
+          <li class="active"><a href="reparatii-turbosuflante.html">Reparatii turbosuflante</a></li>
           <li><a href="garantie.html">Garantie</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         </div><!--/.nav-collapse -->
       </nav>
       
-      <section id="home">
+      <section  class="text-section">
         <div class="flexslider">
           <ul class="slides">
             <li>
@@ -109,42 +107,8 @@
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 text-center page-content-container">
-              <h2 class="indie-title">Oferim o <span class="red">diagnosticare gratuita</span> si un <span class="red">pret corect</span> in ceea ce priveste <span class="red">reconditionarea turbosuflantei</span> dumneavoastra.</h2>
-              <p class="fs18"><a href="contact.html" class="btn btn-primary btn-lg">Contactati-ne</a> pentru orice alte informatii sau pentru programari.</p>
-            </div>
-            <div class="col-xs-8 col-xs-offset-2">
-              <hr class="strong-line-1"/>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-md-offset-1 col-md-10">
-                <a href="images/gal_1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_1.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_2.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_3.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_4.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_5.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_5.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_6.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_6.jpg" class="img-responsive">
-                </a>
-              </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-8 col-xs-offset-2">
-              <hr class="strong-line-2"/>
-            </div>
-            <div class="col-xs-12">
-              <h2 class="text-center">Oferim servicii de reconditionari turbine pentru toate marcile de turbine existente pe piata.<br /><small>Garrett, BorgWarner (KKK), Mitsubishi, Ihi, Holset, Schwitzer.</small></h2>
+            <div class="col-xs-12 page-content-container">
+              <h2 class="indie-title text-center">Oferim servicii profesionale de reconditionari si reparatii turbosuflante pentru toate marcile de turbine existente pe piata: <span class="red">Garrett</span>, <span class="red">BorgWarner (KKK)</span>, <span class="red">Mitsubishi</span>, <span class="red">Ihi</span>, <span class="red">Holset</span>, <span class="red">Schwitzer</span></h2>
               <div id="carousel-marci" class="carousel slide carousel-images" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="item active">
@@ -159,11 +123,66 @@
                   </div>
                 </div>
               </div>
+              <p>&nbsp;</p>
+              <p class="fs28 indie-text text-center">Reparam turbosuflante atat pentru <strong class="red">autoturisme</strong> cat si pentru <strong class="red">camioane</strong> sau <strong class="red">utilaje</strong>.</p>
+              <p class="fs28 text-center indie-text"><strong class="green">Livram</strong> si <strong class="green">reparam</strong> turbosuflante din orice colt al tarii.</p>
+              <p class="fs28 text-center indie-text">Reconditionarea turbinei inseamna o <strong class="green">economisire a 50%</strong> din pretul unei turbine noi.</p>
+              <p class="fs28 text-center indie-text">Preturile variaza in functie de tipul de turbina de care are nevoie masina dumnevoastra:<br /><strong class="red">cu geometrie fixa sau variabila</strong>, <strong class="red">cu actuator electronic sau vacuumatic</strong>.</p>
+              <p>&nbsp;</p>
+              <h2>Cum procedam?</h2>
+              <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingOne">
+                    <h4 class="panel-title">
+                      <a class="noJumpLink" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        1. Diagnosticare
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                    <div class="panel-body">
+                       <p>Pentru a va putea oferi informatii despre cauzele care au dus la defectarea turbosuflantei, specialistii nostri efectueaza o diagonosticare a fiecarei turbosuflante care ajunge la sediul nostru.</p>
+                       <p>Odata ce au fost determinate motivele defectarii, se stabileste un necesar de piese, clientul este instiintat si se poate trece la procesul de reconditionare.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingTwo">
+                    <h4 class="panel-title">
+                      <a class="collapsed noJumpLink" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        2. Reconditionare
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                    <div class="panel-body">
+                      <p>Reconditionarea propriu-zisa presupune o demontare, curatare/sablare carcase si inlocuire totala a pieselor constituente ale angrenajului central: compresorul, axul, lagarul de ungere, bucsa, segmentii si corpul central.</p>
+                      <p>Fiecare piesa inlocuita va fi schimbata cu una noua si sigilata.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingThree">
+                    <h4 class="panel-title">
+                      <a class="collapsed noJumpLink" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        3. Echilibrare
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                    <div class="panel-body">
+                      <p>Intr-o etapa ulterioara, se trece la echilibrarea si testarea turbosuflantei.</p>
+                      <p>Pentru aceasta operatie este folosita o masina performanta SYNTHESIS using REVICON TECHNOLOGY care permite supunerea piesei la un stres de 3 ori mai mare decat montata pe autoturism.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <p class="fs28 text-center indie-text">Pentru a efectua o programare, ne puteti suna la numerele de telefon<br /><span class="green">0742 458 167</span> sau <span class="green">0740 814 497</span>.</p>
+              <p class="fs20">Clientilor din alte orase le punem la dispozitie posibilitatea de a trimite turbina la sediul nostru, prin intermediul partenerilor din cadrul firmelor de curierat.</p>
             </div>
-            <div class="clearfix"></div>
-            <p>&nbsp;</p>
           </div>
         </div>
+        <p>&nbsp;</p>
       </section>
       <footer class="carbon-fiber">
         <div class="container">
@@ -194,7 +213,6 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.3.0/jquery.flexslider-min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/3.2.2/ekko-lightbox.min.js"></script>
       <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
       <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -207,12 +225,5 @@
       <!-- build:js({app,.tmp}) scripts/main.js -->
       <script src="scripts/main.js"></script>
       <!-- endbuild -->
-      <script>
-        $(document).delegate('*[data-toggle="lightbox"]', 'click', function(event) {
-            event.preventDefault();
-            console.log("test");
-            $(this).ekkoLightbox();
-        });
-      </script>
     </body>
   </html>
