--- a/app/garantie.html
+++ b/app/garantie.html
@@ -2,8 +2,8 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>TurboLine: reconditionari turbosuflante auto</title>
-    <meta name="description" content="Turbo Line garanteaza reconditionarea turbosuflantei la o calitate superioara.">
+    <title>TurboLine: reconditionari turbine auto</title>
+    <meta name="description" content="Turbo Line S.R.L garanteaza pentru calitatea produselor si serviciilor oferite de catre servisul nostru printr-un certificat de garantie valabil 12 luni.">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -13,11 +13,9 @@
     <!-- endbuild -->
     <link href='http://fonts.googleapis.com/css?family=Patua+One|Open+Sans+Condensed:300|Open+Sans:400,300,600,600italic,700,700italic,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.3.0/flexslider-min.css">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/3.2.2/ekko-lightbox.min.css" rel="stylesheet">
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-    
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
@@ -40,16 +38,16 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav nav-pills navbar-right">
-          <li class="active"><a href="index.html">Acasa</a></li>
+          <li><a href="index.html">Acasa</a></li>
           <li><a href="servicii.html">Servicii</a></li>
           <li><a href="reparatii-turbosuflante.html">Reparatii turbosuflante</a></li>
-          <li><a href="garantie.html">Garantie</a></li>
+          <li class="active"><a href="garantie.html">Garantie</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         </div><!--/.nav-collapse -->
       </nav>
       
-      <section id="home">
+      <section class="text-section">
         <div class="flexslider">
           <ul class="slides">
             <li>
@@ -98,7 +96,7 @@
             <div class="row">
               <div class="col-xs-12 col-md-8">
                 <h4><span class="red">Turbo Line</span> iti ofera solutia de care ai nevoie pentru <span class="red">turbosuflanta</span> ta.</h4>
-                <p>Garantam o reconditionare la o calitate superioara.</p> 
+                <p>Garantam o reconditionare la o calitate superioara.</p>  
               </div>
               <div class="col-xs-12 col-md-4">
                 <p>&nbsp;</p>
@@ -109,42 +107,13 @@
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 text-center page-content-container">
-              <h2 class="indie-title">Oferim o <span class="red">diagnosticare gratuita</span> si un <span class="red">pret corect</span> in ceea ce priveste <span class="red">reconditionarea turbosuflantei</span> dumneavoastra.</h2>
-              <p class="fs18"><a href="contact.html" class="btn btn-primary btn-lg">Contactati-ne</a> pentru orice alte informatii sau pentru programari.</p>
-            </div>
-            <div class="col-xs-8 col-xs-offset-2">
-              <hr class="strong-line-1"/>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-md-offset-1 col-md-10">
-                <a href="images/gal_1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_1.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_2.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_3.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_4.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_5.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_5.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_6.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_6.jpg" class="img-responsive">
-                </a>
-              </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-8 col-xs-offset-2">
-              <hr class="strong-line-2"/>
-            </div>
-            <div class="col-xs-12">
-              <h2 class="text-center">Oferim servicii de reconditionari turbine pentru toate marcile de turbine existente pe piata.<br /><small>Garrett, BorgWarner (KKK), Mitsubishi, Ihi, Holset, Schwitzer.</small></h2>
+            <div class="col-xs-12 page-content-container">
+              <h2 class="indie-title green">Declaratie de garantie:</h2>
+              <p>Turbo Line S.R.L garanteaza pentru calitatea produselor si serviciilor oferite de catre servisul nostru printr-un certificat de garantie valabil 12 luni.</p>
+              <p>Servisul nostru isi asuma responsabilitatea in perioada de garantie pentru defectele produselor servisate la noi, daca se face dovada ca acestea au aparut din cauza proastei calitati a pieselor inlocuite de catre personalul nostru sau a unei erori de asamblare.</p>
+              <p>In acest caz, TURBO LINE S.R.L. va asigura inlocuirea pieselor deteriorate cu unele noi si repararea produsului in cel mai scurt timp posibil.</p>
+              <p>La aducerea produsului in servis pentru reparatii in perioada de garantie TURBO LINE S.R.L isi rezerva dreptul de a verifica produsul si de a descoperii motivului pentru care acesta s-a defectat.</p>
+              <p>Clientul are obligatia de a aduce produsul in servis si furnizarea tuturor informatiilor cerute de personalul TURBO LINE S.R.L. cu privire la produs si la defectul sesizat.</p>
               <div id="carousel-marci" class="carousel slide carousel-images" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="item active">
@@ -159,11 +128,71 @@
                   </div>
                 </div>
               </div>
+              <h2 class="indie-title red">ATENTIE !!!</h2>
+              <p>Inainte de instalarea pe autovehicul a produsului livrat de catre TURBO LINE S.R.L., este absolut obligatorie respecatrea urmatoarelor instructiuni.</p>
+              <ul class="title-list">
+                <li>efectuarea shimbului de ulei cu ulei adecvat</li>
+                <li>schimbarea filtrului de ulei</li>
+                <li>verificarea si curatarea tubulaturii care deserveste alimentarea cu ulei</li>
+                <li>verificarea si curatarea tubulaturii de admisie cat si de evacuare</li>
+                <li>schimbarea filtrului de aer</li>
+                <li>inlocuirea garniturilor cu altele noi</li>
+              </ul>
+              <div class="clearfix"></div>
+              <p>&nbsp;</p>
             </div>
-            <div class="clearfix"></div>
-            <p>&nbsp;</p>
+            <div class="col-xs-6 col-md-3 round-tc">
+              <div class="carousel slide carousel-round-images carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="images/tc-1.jpg" alt="turbina" />
+                  </div>
+                  <div class="item">
+                    <img src="images/tc-2.jpg" alt="turbina" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-md-3 round-tc">
+              <div class="carousel slide carousel-round-images-1 carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="images/tc-4.jpg" alt="turbina" />
+                  </div>
+                  <div class="item">
+                    <img src="images/tc-6.jpg" alt="turbina" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-md-3 round-tc">
+              <div class="carousel slide carousel-round-images-2 carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="images/tc-5.jpg" alt="turbina" />
+                  </div>
+                  <div class="item">
+                    <img src="images/tc-8.jpg" alt="turbina" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-md-3 round-tc">
+              <div class="carousel slide carousel-round-images-3 carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="images/tc-7.jpg" alt="turbina" />
+                  </div>
+                  <div class="item">
+                    <img src="images/tc-3.jpg" alt="turbina" />
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
       </section>
       <footer class="carbon-fiber">
         <div class="container">
@@ -194,7 +223,6 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.3.0/jquery.flexslider-min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/3.2.2/ekko-lightbox.min.js"></script>
       <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
       <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -207,12 +235,5 @@
       <!-- build:js({app,.tmp}) scripts/main.js -->
       <script src="scripts/main.js"></script>
       <!-- endbuild -->
-      <script>
-        $(document).delegate('*[data-toggle="lightbox"]', 'click', function(event) {
-            event.preventDefault();
-            console.log("test");
-            $(this).ekkoLightbox();
-        });
-      </script>
     </body>
   </html>
