--- a/app/servicii.html
+++ b/app/servicii.html
@@ -2,8 +2,8 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>TurboLine: reconditionari turbosuflante auto</title>
-    <meta name="description" content="Turbo Line garanteaza reconditionarea turbosuflantei la o calitate superioara.">
+    <title>TurboLine: reconditionari turbine auto</title>
+    <meta name="description" content="Oferim servicii profesionale de reconditionari si reparatii turbosuflante pentru toate marcile de turbine existente pe piata.">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -13,11 +13,9 @@
     <!-- endbuild -->
     <link href='http://fonts.googleapis.com/css?family=Patua+One|Open+Sans+Condensed:300|Open+Sans:400,300,600,600italic,700,700italic,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.3.0/flexslider-min.css">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/3.2.2/ekko-lightbox.min.css" rel="stylesheet">
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-    
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
@@ -40,8 +38,8 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav nav-pills navbar-right">
-          <li class="active"><a href="index.html">Acasa</a></li>
-          <li><a href="servicii.html">Servicii</a></li>
+          <li><a href="index.html">Acasa</a></li>
+          <li class="active"><a href="servicii.html">Servicii</a></li>
           <li><a href="reparatii-turbosuflante.html">Reparatii turbosuflante</a></li>
           <li><a href="garantie.html">Garantie</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -49,7 +47,7 @@
         </div><!--/.nav-collapse -->
       </nav>
       
-      <section id="home">
+      <section  class="text-section">
         <div class="flexslider">
           <ul class="slides">
             <li>
@@ -98,7 +96,7 @@
             <div class="row">
               <div class="col-xs-12 col-md-8">
                 <h4><span class="red">Turbo Line</span> iti ofera solutia de care ai nevoie pentru <span class="red">turbosuflanta</span> ta.</h4>
-                <p>Garantam o reconditionare la o calitate superioara.</p> 
+                <p>Garantam o reconditionare la o calitate superioara.</p>  
               </div>
               <div class="col-xs-12 col-md-4">
                 <p>&nbsp;</p>
@@ -109,61 +107,85 @@
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 text-center page-content-container">
-              <h2 class="indie-title">Oferim o <span class="red">diagnosticare gratuita</span> si un <span class="red">pret corect</span> in ceea ce priveste <span class="red">reconditionarea turbosuflantei</span> dumneavoastra.</h2>
-              <p class="fs18"><a href="contact.html" class="btn btn-primary btn-lg">Contactati-ne</a> pentru orice alte informatii sau pentru programari.</p>
+            <div class="col-xs-12 col-md-6 page-content-container">
+              <p class="fs18">Serviciile principale pe care le efectuam in scopul reparatiilor de turbosuflante sunt urmatoarele:</p>
+              <ul class="title-list">
+                <li>Diagnosticare si ofertare</li>
+                <li>Curatare/Sablare</li>
+                <li>Curatare geometrie variabila</li>
+                <li>Echilibrare dinamica</li>
+                <li>Verificare / reglaj actuatoare</li>
+                <li>Demontare / Montare pe autovehicul</li>
+              </ul>
             </div>
-            <div class="col-xs-8 col-xs-offset-2">
-              <hr class="strong-line-1"/>
+            <div class="col-xs-12 col-md-6 page-content-container">
+              <p>TURBO LINE vine in Sprijinul Clientilor cu:</p>
+              <ul class="title-list">
+                <li>diagnoza gratuita si preturi incepand de la 750 de lei</li>
+                <li>certificat de garantie pentru 12 luni</li>
+                <li>certificat de echilibrare dinamica</li>
+                <li>calitate la cele mai inalte standarde datorata investiilor in echipamente si in piese de calitate</li>
+                <li>testare si echilibrare la peste 240.000 RPM, folosind o masina performanta SYNTHESIS using REVICON TECHNOLOGY</li>
+                <li>un timp de executie foarte scurt in functie de disponibilitatea pieselor de schimb</li>
+                <li>turbosuflante reconditionate din stoc</li>
+              </ul>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-md-offset-1 col-md-10">
-                <a href="images/gal_1.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_1.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_2.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_3.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_3.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_4.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_4.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_5.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_5.jpg" class="img-responsive">
-                </a>
-                <a href="images/gal_6.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Turbo Line" class="col-xs-6 col-md-4 gal-image">
-                    <img src="images/gal_6.jpg" class="img-responsive">
-                </a>
-              </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-8 col-xs-offset-2">
-              <hr class="strong-line-2"/>
+            <div class="col-xs-12 page-content-container">
+              <h2 class="indie-title text-center">Livrare <span class="red">in toate orasele</span> din tara</h2>
+              <p>&nbsp;</p>
             </div>
-            <div class="col-xs-12">
-              <h2 class="text-center">Oferim servicii de reconditionari turbine pentru toate marcile de turbine existente pe piata.<br /><small>Garrett, BorgWarner (KKK), Mitsubishi, Ihi, Holset, Schwitzer.</small></h2>
-              <div id="carousel-marci" class="carousel slide carousel-images" data-ride="carousel">
+            <div class="col-xs-6 col-md-3 round-tc">
+              <div class="carousel slide carousel-round-images carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="item active">
-                    <img src="images/marca_1.jpg" alt="Garett" class="greyscaled" />
-                    <img src="images/marca_2.jpg" alt="BorgWarner" class="greyscaled" />
-                    <img src="images/marca_3.jpg" alt="Mitsubishi" class="greyscaled" />
+                    <img src="images/tc-1.jpg" alt="turbina" />
                   </div>
                   <div class="item">
-                    <img src="images/marca_4.jpg" alt="Ihi" class="greyscaled" />
-                    <img src="images/marca_5.jpg" alt="Holset" class="greyscaled" />
-                    <img src="images/marca_6.jpg" alt="Schwitzer" class="greyscaled" />
+                    <img src="images/tc-2.jpg" alt="turbina" />
                   </div>
                 </div>
               </div>
             </div>
-            <div class="clearfix"></div>
-            <p>&nbsp;</p>
+            <div class="col-xs-6 col-md-3 round-tc">
+              <div class="carousel slide carousel-round-images-1 carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="images/tc-4.jpg" alt="turbina" />
+                  </div>
+                  <div class="item">
+                    <img src="images/tc-6.jpg" alt="turbina" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-md-3 round-tc">
+              <div class="carousel slide carousel-round-images-2 carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="images/tc-5.jpg" alt="turbina" />
+                  </div>
+                  <div class="item">
+                    <img src="images/tc-8.jpg" alt="turbina" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-md-3 round-tc">
+              <div class="carousel slide carousel-round-images-3 carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="images/tc-7.jpg" alt="turbina" />
+                  </div>
+                  <div class="item">
+                    <img src="images/tc-3.jpg" alt="turbina" />
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
       </section>
       <footer class="carbon-fiber">
         <div class="container">
@@ -194,7 +216,6 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.3.0/jquery.flexslider-min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/3.2.2/ekko-lightbox.min.js"></script>
       <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
       <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -207,12 +228,5 @@
       <!-- build:js({app,.tmp}) scripts/main.js -->
       <script src="scripts/main.js"></script>
       <!-- endbuild -->
-      <script>
-        $(document).delegate('*[data-toggle="lightbox"]', 'click', function(event) {
-            event.preventDefault();
-            console.log("test");
-            $(this).ekkoLightbox();
-        });
-      </script>
     </body>
   </html>
