Reparatii and contact changes

--- a/app/contact.html
+++ b/app/contact.html
@@ -119,17 +119,17 @@
             <div class="col-xs-12 col-md-6">
               <h4 class="red indie-title">Pentru comenzi sau programari</h4>
               <p>Va rugam sa ne contactati telefonic sau folosind formularul din stanga.</p>
+              <p class="clearfix contact-details">
+                <span class="pull-left">Telefon:</span>
+                <span class="pull-left addres-set"><strong class="indie-text green">0740814497</strong> - service<br /><strong class="indie-text green">0742458167</strong> - service<br /><strong class="indie-text green">0724025900</strong> - office</span>
+              </p>
               <hr />
               <h4 class="green indie-title">Unde ne gasiti</h4>
               <p class="clearfix">
                 <span class="pull-left">Adresa:</span>
                 <span class="pull-left addres-set"><strong>Str. Campina nr. 51-53 (In curte la transcom), Cluj-Napoca</strong></span>
               </p>
-              <p class="clearfix">
-                <span class="pull-left">Telefon:</span>
-                <span class="pull-left addres-set"><strong class="indie-text green">0740814497</strong> - service<br /><strong class="indie-text green">0742458167</strong> - service<br /><strong class="indie-text green">0724025900</strong> - office</span>
-              </p>
-              <p class="clearfix">
+              <p class="clearfix  contact-details">
                 <span class="pull-left">E-mail:</span>
                 <span class="pull-left addres-set"><strong class="indie-text red">office@turboline.ro</strong><br /><strong class="indie-text red">service@turboline.ro</strong></span>
               </p>
