--- a/app/reparatii-turbosuflante.html
+++ b/app/reparatii-turbosuflante.html
@@ -124,27 +124,33 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 page-content-container">
-              <h2 class="indie-title text-center">Oferim servicii profesionale de reconditionari si reparatii turbosuflante pentru toate marcile de turbine existente pe piata: <span class="red">Garrett</span>, <span class="red">BorgWarner (KKK)</span>, <span class="red">Mitsubishi</span>, <span class="red">Ihi</span>, <span class="red">Holset</span>, <span class="red">Schwitzer</span></h2>
-              <div id="carousel-marci" class="carousel slide carousel-images" data-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="item active">
-                    <img src="images/marca_1.jpg" alt="Garett" class="greyscaled" />
-                    <img src="images/marca_2.jpg" alt="BorgWarner" class="greyscaled" />
-                    <img src="images/marca_3.jpg" alt="Mitsubishi" class="greyscaled" />
+              <div class="row">
+                <div class="col-xs-12 col-md-5">
+                  <img src="images/turbo.jpg" class="turbo img-responsive" alt="turbo" />
+                </div>
+                <div class="col-xs-12 col-md-7">
+                  <p class="fs24 indie-text">Oferim <span class="red uppercase">servicii profesionale</span> de reconditionari si reparatii <span class="green uppercase">turbosuflante</span> pentru <span class="red uppercase">autoturisme, camioane</span><span class="red"> si</span><span class="red uppercase"> utilaje</span> pentru toate marcile existente.</p>
+                  <div id="carousel-marci" class="carousel slide carousel-images" data-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="item active">
+                        <img src="images/marca_1.jpg" alt="Garett" class="greyscaled" />
+                        <img src="images/marca_2.jpg" alt="BorgWarner" class="greyscaled" />
+                        <img src="images/marca_3.jpg" alt="Mitsubishi" class="greyscaled" />
+                      </div>
+                      <div class="item">
+                        <img src="images/marca_4.jpg" alt="Ihi" class="greyscaled" />
+                        <img src="images/marca_5.jpg" alt="Holset" class="greyscaled" />
+                        <img src="images/marca_6.jpg" alt="Schwitzer" class="greyscaled" />
+                      </div>
+                    </div>
                   </div>
-                  <div class="item">
-                    <img src="images/marca_4.jpg" alt="Ihi" class="greyscaled" />
-                    <img src="images/marca_5.jpg" alt="Holset" class="greyscaled" />
-                    <img src="images/marca_6.jpg" alt="Schwitzer" class="greyscaled" />
-                  </div>
+                  <hr class="strong-line"/>
+                  <p class="fs24 indie-text"><span class="green">Reconditionarea TURBOSUFLANTEI</span> inseamna o <span class="red">ECONOMISIRE de 50%</span> din pretul unei turbine noi.</p>
+                  <hr class="strong-line"/>
+                  <p class="fs24 indie-text"><span class="red">Preturile incep de la 750 lei</span> si variaza in functie de <span class="green uppercase">turbosuflanta</span> de care are nevoie masina dumnevoastra:<br /><span class="shift-right">-cu <span class="red uppercase">geometrie fixa</span> sau <span class="red uppercase">variabila</span></span><br /><span class="shift-right">-cu <span class="red uppercase">actuator electronic</span> sau <span class="red uppercase">vacuumatic</span>.</span></p>
                 </div>
               </div>
-              <p>&nbsp;</p>
-              <p class="fs28 indie-text text-center">Reparam turbosuflante atat pentru <strong class="red">autoturisme</strong> cat si pentru <strong class="red">camioane</strong> sau <strong class="red">utilaje</strong>.</p>
-              <p class="fs28 text-center indie-text"><strong class="green">Livram</strong> si <strong class="green">reparam</strong> turbosuflante din orice colt al tarii.</p>
-              <p class="fs28 text-center indie-text">Reconditionarea turbinei inseamna o <strong class="green">economisire a 50%</strong> din pretul unei turbine noi.</p>
-              <p class="fs28 text-center indie-text">Preturile variaza in functie de tipul de turbina de care are nevoie masina dumnevoastra:<br /><strong class="red">cu geometrie fixa sau variabila</strong>, <strong class="red">cu actuator electronic sau vacuumatic</strong>.</p>
-              <p>&nbsp;</p>
+              <hr class="strong-line"/>
               <h2>Cum procedam?</h2>
               <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default">
