Small changes on Reparatii and Garantie

--- a/app/garantie.html
+++ b/app/garantie.html
@@ -145,7 +145,7 @@
                 </div>
               </div>
               <h2 class="indie-title red">ATENTIE !!!</h2>
-              <p>Inainte de instalarea pe autovehicul a produsului livrat de catre TURBO LINE S.R.L., este absolut obligatorie respecatrea urmatoarelor instructiuni.</p>
+              <p>Inainte de instalarea pe autovehicul a produsului livrat de catre TURBO LINE S.R.L., este absolut obligatorie respecatrea urmatoarelor instructiuni:</p>
               <ul class="title-list">
                 <li>efectuarea shimbului de ulei cu ulei adecvat</li>
                 <li>schimbarea filtrului de ulei</li>
