--- a/app/reparatii-turbosuflante.html
+++ b/app/reparatii-turbosuflante.html
@@ -129,25 +129,31 @@
                   <img src="images/turbo.jpg" class="turbo img-responsive" alt="turbo" />
                 </div>
                 <div class="col-xs-12 col-md-7">
-                  <p class="fs24 indie-text">Oferim <span class="red uppercase">servicii profesionale</span> de reconditionari si reparatii <span class="green uppercase">turbosuflante</span> pentru <span class="red uppercase">autoturisme, camioane</span><span class="red"> si</span><span class="red uppercase"> utilaje</span> pentru toate marcile existente.</p>
-                  <div id="carousel-marci" class="carousel slide carousel-images" data-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="item active">
-                        <img src="images/marca_1.jpg" alt="Garett" class="greyscaled" />
-                        <img src="images/marca_2.jpg" alt="BorgWarner" class="greyscaled" />
-                        <img src="images/marca_3.jpg" alt="Mitsubishi" class="greyscaled" />
-                      </div>
-                      <div class="item">
-                        <img src="images/marca_4.jpg" alt="Ihi" class="greyscaled" />
-                        <img src="images/marca_5.jpg" alt="Holset" class="greyscaled" />
-                        <img src="images/marca_6.jpg" alt="Schwitzer" class="greyscaled" />
-                      </div>
+                  <p class="fs18 indie-text">Oferim <span class="red uppercase">servicii profesionale</span> de reconditionari si reparatii <span class="green uppercase">turbosuflante</span> pentru <span class="red uppercase">autoturisme, camioane</span><span class="red"> si</span><span class="red uppercase"> utilaje</span> pentru toate marcile existente.</p>
+                  <div class="row">
+                    <div class="col-xs-4 col-md-2">
+                        <img src="images/marca_1.jpg" alt="Garett" class="img-responsive" />
+                    </div>
+                    <div class="col-xs-4 col-md-2">
+                        <img src="images/marca_2.jpg" alt="BorgWarner" class="img-responsive" />
+                    </div>
+                    <div class="col-xs-4 col-md-2">
+                        <img src="images/marca_3.jpg" alt="Mitsubishi" class="img-responsive" />
+                    </div>
+                    <div class="col-xs-4 col-md-2">
+                        <img src="images/marca_4.jpg" alt="Ihi" class="img-responsive" />
+                    </div>
+                    <div class="col-xs-4 col-md-2">
+                        <img src="images/marca_5.jpg" alt="Holset" class="img-responsive" />
+                    </div>
+                    <div class="col-xs-4 col-md-2">
+                        <img src="images/marca_6.jpg" alt="Schwitzer" class="img-responsive" />
                     </div>
                   </div>
                   <hr class="strong-line"/>
-                  <p class="fs24 indie-text"><span class="green">Reconditionarea TURBOSUFLANTEI</span> inseamna o <span class="red">ECONOMISIRE de 50%</span> din pretul unei turbine noi.</p>
+                  <p class="fs18 indie-text padding-bottom-large"><span class="green">Reconditionarea TURBOSUFLANTEI</span> inseamna o<br /><span class="red">ECONOMISIRE de 50%</span> din pretul unei turbine noi.</p>
                   <hr class="strong-line"/>
-                  <p class="fs24 indie-text"><span class="red">Preturile incep de la 750 lei</span> si variaza in functie de <span class="green uppercase">turbosuflanta</span> de care are nevoie masina dumnevoastra:<br /><span class="shift-right">-cu <span class="red uppercase">geometrie fixa</span> sau <span class="red uppercase">variabila</span></span><br /><span class="shift-right">-cu <span class="red uppercase">actuator electronic</span> sau <span class="red uppercase">vacuumatic</span>.</span></p>
+                  <p class="fs18 indie-text"><span class="red">Preturile incep de la 750 lei</span> si variaza in functie de <span class="green uppercase">turbosuflanta</span> de care are nevoie masina dumnevoastra:<br /><span class="shift-right">-cu <span class="red uppercase">geometrie fixa</span> sau <span class="red uppercase">variabila</span></span><br /><span class="shift-right">-cu <span class="red uppercase">actuator electronic</span> sau <span class="red uppercase">vacuumatic</span>.</span></p>
                 </div>
               </div>
               <hr class="strong-line"/>
