Logo image fixes

--- a/app/reparatii-turbosuflante.html
+++ b/app/reparatii-turbosuflante.html
@@ -131,29 +131,29 @@
                 <div class="col-xs-12 col-md-7">
                   <p class="fs18 indie-text">Oferim <span class="red uppercase">servicii profesionale</span> de reconditionari si reparatii <span class="green uppercase">turbosuflante</span> pentru <span class="red uppercase">autoturisme, camioane</span><span class="red"> si</span><span class="red uppercase"> utilaje</span> pentru toate marcile existente.</p>
                   <div class="row">
-                    <div class="col-xs-4 col-md-2">
+                    <div class="col-xs-4 col-md-2 nopadding">
                         <img src="images/marca_1.jpg" alt="Garett" class="img-responsive" />
                     </div>
-                    <div class="col-xs-4 col-md-2">
+                    <div class="col-xs-4 col-md-2 nopadding">
                         <img src="images/marca_2.jpg" alt="BorgWarner" class="img-responsive" />
                     </div>
-                    <div class="col-xs-4 col-md-2">
+                    <div class="col-xs-4 col-md-2 nopadding">
                         <img src="images/marca_3.jpg" alt="Mitsubishi" class="img-responsive" />
                     </div>
-                    <div class="col-xs-4 col-md-2">
+                    <div class="col-xs-4 col-md-2 nopadding">
                         <img src="images/marca_4.jpg" alt="Ihi" class="img-responsive" />
                     </div>
-                    <div class="col-xs-4 col-md-2">
+                    <div class="col-xs-4 col-md-2 nopadding">
                         <img src="images/marca_5.jpg" alt="Holset" class="img-responsive" />
                     </div>
-                    <div class="col-xs-4 col-md-2">
+                    <div class="col-xs-4 col-md-2 nopadding">
                         <img src="images/marca_6.jpg" alt="Schwitzer" class="img-responsive" />
                     </div>
                   </div>
                   <hr class="strong-line"/>
-                  <p class="fs18 indie-text padding-bottom-large"><span class="green">Reconditionarea TURBOSUFLANTEI</span> inseamna o<br /><span class="red">ECONOMISIRE de 50%</span> din pretul unei turbine noi.</p>
+                  <p class="fs18 indie-text text-center"><span class="green">Reconditionarea TURBOSUFLANTEI</span> inseamna o<br /><span class="red">ECONOMISIRE de 50%</span> din pretul unei turbine noi.</p>
                   <hr class="strong-line"/>
-                  <p class="fs18 indie-text"><span class="red">Preturile incep de la 750 lei</span> si variaza in functie de <span class="green uppercase">turbosuflanta</span> de care are nevoie masina dumnevoastra:<br /><span class="shift-right">-cu <span class="red uppercase">geometrie fixa</span> sau <span class="red uppercase">variabila</span></span><br /><span class="shift-right">-cu <span class="red uppercase">actuator electronic</span> sau <span class="red uppercase">vacuumatic</span>.</span></p>
+                  <p class="fs18 indie-text padding-bottom-large"><span class="red">Preturile incep de la 750 lei</span> si variaza in functie de <span class="green uppercase">turbosuflanta</span> de care are nevoie masina dumnevoastra:<br /><span class="shift-right">-cu <span class="red uppercase">geometrie fixa</span> sau <span class="red uppercase">variabila</span></span><br /><span class="shift-right">-cu <span class="red uppercase">actuator electronic</span> sau <span class="red uppercase">vacuumatic</span>.</span></p>
                 </div>
               </div>
               <hr class="strong-line"/>
