--- a/app/reparatii-turbosuflante.html
+++ b/app/reparatii-turbosuflante.html
@@ -151,7 +151,7 @@
                     </div>
                   </div>
                   <hr class="strong-line"/>
-                  <p class="fs18 indie-text text-center"><span class="green">Reconditionarea TURBOSUFLANTEI</span> inseamna o<br /><span class="red">ECONOMISIRE de 50%</span> din pretul unei turbine noi.</p>
+                  <p class="fs18 indie-text"><span class="green">Reconditionarea TURBOSUFLANTEI</span> inseamna o<br /><span class="red">ECONOMISIRE de 50%</span> din pretul unei turbine noi.</p>
                   <hr class="strong-line"/>
                   <p class="fs18 indie-text padding-bottom-large"><span class="red">Preturile incep de la 750 lei</span> si variaza in functie de <span class="green uppercase">turbosuflanta</span> de care are nevoie masina dumnevoastra:<br /><span class="shift-right">-cu <span class="red uppercase">geometrie fixa</span> sau <span class="red uppercase">variabila</span></span><br /><span class="shift-right">-cu <span class="red uppercase">actuator electronic</span> sau <span class="red uppercase">vacuumatic</span>.</span></p>
                 </div>
