Reparatii text fix

--- a/app/reparatii-turbosuflante.html
+++ b/app/reparatii-turbosuflante.html
@@ -200,7 +200,7 @@
                   <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                     <div class="panel-body">
                       <p>Intr-o etapa ulterioara, se trece la echilibrarea si testarea turbosuflantei.</p>
-                      <p>Pentru aceasta operatie este folosita o masina performanta SYNTHESIS using REVICON TECHNOLOGY care permite supunerea piesei la un stres de 3 ori mai mare decat montata pe autoturism.</p>
+                      <p>Pentru aceasta operatie este folosit un stand performant SYNTHESIS using REVICON TECHNOLOGY care permite echilibrarea individuala a axului si a ansamblului ax-compresor, dupa care se trece la echilibrarea si testarea finala a intregului ansamblu rotativ (CHRA). Tehnologia folosita permite supunerea piesei la un stres de 3 ori mai mare decat montata pe autoturism.</p>
                     </div>
                   </div>
                 </div>
